2024-05-25T16:09:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9236682077 # 305
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-25
* notice: last 14d: unq all: 4 29
* notice: prev accum: outdated-unq outdated-all / unq all: 798 1266 / 823 1297
* notice: next accum: outdated-unq outdated-all / unq all: 800 1268 / 823 1297
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-05-11] / []

2024-05-25T08:11:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9234062018 # 304
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-25
* notice: last 14d: unq all: 5 30
* notice: prev accum: outdated-unq outdated-all / unq all: 798 1266 / 821 1295
* notice: next accum: outdated-unq outdated-all / unq all: 798 1266 / 823 1297
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2024-05-11 2024-05-25]

2024-05-25T00:39:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9231520271 # 303
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-25
* notice: last 14d: unq all: 6 29
* notice: prev accum: outdated-unq outdated-all / unq all: 795 1263 / 821 1294
* notice: next accum: outdated-unq outdated-all / unq all: 798 1266 / 821 1295
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-05-10] / [2024-05-24]

2024-05-24T08:11:25Z: