@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-05-25T16:09:21Z",
+  "timestamp" : "2024-05-26T00:43:41Z",
   "count_outdated" : 1268,
   "uniques_outdated" : 800,
-  "count" : 1297,
+  "count" : 1298,
   "uniques" : 823,
   "clones" : [
     {
@@ -124,9 +124,9 @@
     },
     {
       "timestamp": "2024-05-25T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
