@@ -1,5 +1,5 @@
 {
-  "count": 29,
+  "count": 30,
   "uniques": 4,
   "clones": [
     {
@@ -69,7 +69,7 @@
     },
     {
       "timestamp": "2024-05-25T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
