@@ -1,3 +1,12 @@
+2024-05-26T00:43:41Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9239350452 # 306
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-26
+* notice: last 14d: unq all: 4 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 800 1268 / 823 1297
+* notice: next accum: outdated-unq outdated-all / unq all: 800 1268 / 823 1298
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2024-05-25]
+
 2024-05-25T16:09:21Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9236682077 # 305
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-25
